traefix-ingress-deployments/demo-1/nginx-deploy-dog.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-dog
  labels:
    run: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx-dog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-dog
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nginx-dog
  template:
    metadata:
      labels:
        run: nginx-dog
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
