traefix-ingress-deployments/demo-1/nginx-deploy-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-main
  labels:
    run: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-main
  labels:
    run: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      containers:
      - image: nginx
        name: nginx
