traefix-ingress-deployments/demo-1/ingress-resource-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
spec:
  rules:
  - host: k8s.lab.local
    http:
      paths:
      - backend:
          serviceName: nginx-service-main
          servicePort: 80
  - host: cat.k8s.lab.local
    http:
      paths:
      - backend:
          serviceName: nginx-service-cat
          servicePort: 80
